[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "remotive-grpc"
version = "0.0.1"
authors = [
  { name="RemotiveLabs support", email="support@remotivelabs.com" },
]
description = "gRPC bindings for Remotive XXX"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
"Homepage" = "XXX"
"Bug Tracker" = "XXX"

