[tool.poetry]
name = "remotivelabs-broker"
description = 'RemotiveLabs Broker gRPC API'
version = "0.2.0-beta1"
readme = "README.md"
license = "Apache-2.0"
homepage = "https://remotivelabs.com/"
repository = "https://github.com/remotivelabs/remotivelabs-apis"
documentation = "https://docs.remotivelabs.com/apis/python/remotivelabs/broker"
authors = ["Support <support@remotivelabs.com>"]
packages = [{ include = "remotivelabs" }]
keywords = ["automotive", "autotech", "networking", "CAN"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Manufacturing",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Communications",
  "Topic :: Internet",
  "Topic :: Scientific/Engineering :: Information Analysis",
]

[tool.poetry.urls]
Issues = "https://github.com/remotivelabs/remotivelabs-apis/issues"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32"
grpcio = "^1.66"
grpc-interceptor = "^0.15"

[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.66"
grpc-stubs = "^1.53"
ruff = "^0.6"
mypy = "^1.11"
types-protobuf = "^5.27"

[tool.poetry.group.test.dependencies]
pytest = "^8.3"
pytest-cov = "^5.0"

[tool.poetry.group.docs.dependencies]
pdoc = "^12.2"
json-schema-for-humans = "^1.0"

[tool.poe.tasks]
test-server = "pytest -m server --cov=remotivelabs.broker"
test = "pytest --cov=remotivelabs.broker"
format = [{ cmd = "ruff check --fix ." }, { cmd = "ruff format ." }]
lint = [{ cmd = "ruff check ." }, { cmd = "ruff format --check --diff ." }]
mypy-check = [{ cmd = "mypy -p remotivelabs.broker -p misc -p tests" }]
check = ["test", "lint", "mypy-check"]

[tool.ruff]
line-length = 140
src = ["remotivelabs", "tests"]

[tool.mypy]
python_version = "3.8"
mypy_path = "."
namespace_packages = true
explicit_package_bases = true
packages = ["remotivelabs.broker", "misc", "tests"]

[[tool.mypy.overrides]]
# A field in diagnostics proto file is accidentally named same as the type (bytes bytes), so we need to ignore the type warning.
module = "remotivelabs.broker.generated.sync.diagnostics_api_pb2"
disable_error_code = ["valid-type"]

[tool.pyright]
include = ["remotivelabs"]

[tool.pytest.ini_options]
addopts = "-v -m 'not server'"
markers = [
  "server: marks tests that require a live server (deselect with '-m \"not server\"')",
]

[build-system]
requires = ["poetry-core>=1.6"]
build-backend = "poetry.core.masonry.api"
