[tool.poetry]
name = "remotivelabs-cloud-storage"
version = "0.0.1"
description = "Python API for integrating with RemotiveCloud Storage"
authors = ["Johan Rask <johan.rask@remotivelabs.com>"]
readme = "README.md"
packages = [
    { include = "remotivelabs", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9, <4"
aiohttp = "^3.11.10"
aiosignal = "^1.3.1"
prometheus-client = "^0.21.1"


[tool.pytest.ini_options]
pythonpath = "src"
markers = [
    "itests: run tests with custom flag"
]


[tool.poetry.group.test.dependencies]
pytest = "^8.3"
pytest-cov = "^5.0"
semver = "^3.0.2"
friendlywords = "^1.1.3"
pytest-asyncio = "^0.24.0"

[tool.poetry.group.lint.dependencies]
ruff = "^0.6.5"
pylint = "^3.2.7"
mypy = "^1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
