[package]
name = "remotive-broker"
version = "0.1.0"
authors = [ "RemotiveLabs support <support@remotivelabs.com>", "Lind, Niclas <niclas.lind@volvocars.com>"]
edition = "2021"

[dependencies]
futures = "0.3.19"
path-slash = "0.1.4"
prost = "0.9.0"
sha2 = "0.10.1"
tokio = { version = "1.14.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
tonic = { version = "0.6.2", features = ["tls", "tls-roots"] }
walkdir = "2.3.2"

[build-dependencies]
tonic-build = "0.6.2"

[[example]]
name = "pub_client"
path = "examples/pub_client.rs"

[[example]]
name = "sub_client"
path = "examples/sub_client.rs"
